Implement code that allows user to pick painting color

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     
     <div id="canvas-container"></div>
+    <div id="color-picker-container">
+        <input id="color-picker" type="color">
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
