Implement code that lets user erase paint

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     
     <div id="canvas-container"></div>
-    <div id="color-picker-container">
+    <div id="controls-container">
         <input id="color-picker" type="color">
+        <button id="erase-button">Erase</button>
     </div>
     <script src="./index.js"></script>
 </body>
