--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="controls-container">
         <input id="color-picker" type="color">
         <button id="erase-button">Erase</button>
+        <button id="reset-canvas-button">Reset</button>
     </div>
     <script src="./index.js"></script>
 </body>
