--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <input id="color-picker" type="color">
         <button id="erase-button">Erase</button>
         <button id="reset-canvas-button">Reset</button>
-    </div>
+        <label for="pixel-density-input">Pixel Density (1-100):</label>
+        <input id="pixel-density-input" type="number" min="1" max="100">
+    </div> 
     <script src="./index.js"></script>
 </body>
 </html>
