--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <button id="reset-canvas-button">Reset</button>
         <label for="pixel-density-input">Pixel Density (1-100):</label>
         <input id="pixel-density-input" type="number" min="1" max="100">
+        <label for="canvas-bgColor-input">Canvas Background Color:</label>
+        <input id="canvas-bgColor-input" type="color">
     </div> 
     <script src="./index.js"></script>
 </body>
