--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <input id="pixel-density-input" type="number" min="1" max="100">
         <label for="canvas-bgColor-input">Canvas Background Color:</label>
         <input id="canvas-bgColor-input" type="color">
+        <div id="canvas-type-radio-input-container">
+            <input type="radio" class="canvas-type-radio-input" value="square" checked=true>square</input>
+            <input type="radio" class="canvas-type-radio-input" value="portrait">portrait</input>
+            <input type="radio" class="canvas-type-radio-input" value="landscape">landscape</input>
+        </div>
     </div> 
     <script src="./index.js"></script>
 </body>
