--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <input type="radio" class="canvas-type-radio-input" value="portrait">portrait</input>
             <input type="radio" class="canvas-type-radio-input" value="landscape">landscape</input>
         </div>
+        <label for="canvas-size-factor-input">Canvas Size:</label>
+        <input id="canvas-size-factor-input" type="range" min="1" max="3" value="2">
     </div> 
     <script src="./index.js"></script>
 </body>
