--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     
     <div id="canvas-container"></div>
     <div id="controls-container">
+        <label for="color-picker">Paint Color:</label>
         <input id="color-picker" type="color">
         <button id="erase-button">Erase</button>
         <button id="reset-canvas-button">Reset</button>
         <label for="pixel-density-input">Pixel Density (1-100):</label>
         <input id="pixel-density-input" type="number" min="1" max="100">
         <label for="canvas-bgColor-input">Canvas Background Color:</label>
-        <input id="canvas-bgColor-input" type="color">
+        <input id="canvas-bgColor-input" type="color" value="#ff0000">
         <div id="canvas-type-radio-input-container">
+            <label for="canvas-type-radio-input">Canvas Type:</label>
             <input type="radio" class="canvas-type-radio-input" value="square" checked=true>square</input>
             <input type="radio" class="canvas-type-radio-input" value="portrait">portrait</input>
             <input type="radio" class="canvas-type-radio-input" value="landscape">landscape</input>
