--- a/index.html
+++ b/index.html
@@ -5,29 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./index.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <title>Pixel Art</title>
 </head>
 <body>
-    
-    <div id="canvas-container"></div>
-    <div id="controls-container">
-        <label for="color-picker">Paint Color:</label>
-        <input id="color-picker" type="color">
-        <button id="erase-button">Erase</button>
-        <button id="reset-canvas-button">Reset</button>
-        <label for="pixel-density-input">Pixel Density (1-100):</label>
-        <input id="pixel-density-input" type="number" min="1" max="100">
-        <label for="canvas-bgColor-input">Canvas Background Color:</label>
-        <input id="canvas-bgColor-input" type="color" value="#ff0000">
-        <div id="canvas-type-radio-input-container">
-            <label for="canvas-type-radio-input">Canvas Type:</label>
-            <input type="radio" class="canvas-type-radio-input" value="square" checked=true>square</input>
-            <input type="radio" class="canvas-type-radio-input" value="portrait">portrait</input>
-            <input type="radio" class="canvas-type-radio-input" value="landscape">landscape</input>
-        </div>
-        <label for="canvas-size-factor-input">Canvas Size:</label>
-        <input id="canvas-size-factor-input" type="range" min="1" max="3" value="2">
-    </div> 
+    <div class="container">
+        <div id="controls-container">
+            <h1>Pixel Art Creator</h1>
+            <div class="color-input-type-container">
+                <label for="color-picker">Paint Color:</label>
+                <input id="color-picker" type="color">
+            </div>
+            <div class="color-input-type-container">
+                <label for="canvas-bgColor-input">Background Color:</label>
+                <input id="canvas-bgColor-input" type="color" value="#ff0000">
+            </div>
+            <div>
+                <label for="pixel-density-input">Pixel Density (1-100):</label>
+                <input id="pixel-density-input" type="number" min="1" max="100">
+            </div>
+            <div id="canvas-type-radio-input-container">
+                <label for="canvas-type-radio-input">Canvas Type:</label>
+                <div class="radio-container">
+                    <div><input type="radio" class="canvas-type-radio-input" value="square" checked=true>square</input></div>
+                    <div><input type="radio" class="canvas-type-radio-input" value="portrait">portrait</input></div>
+                    <div><input type="radio" class="canvas-type-radio-input" value="landscape">landscape</input></div>
+                </div>
+            </div>
+            <div>
+                <label for="canvas-size-factor-input">Canvas Size:</label>
+                <input id="canvas-size-factor-input" type="range" min="1" max="3" value="2">
+            </div>
+            <button id="erase-button">Erase</button>
+            <button id="reset-canvas-button">Reset</button>
+            <div class="copyright">
+                <a href="https://github.com/Rosendo-Martinez/pixel-art">Copycat © 1989 RM</a>
+            </div>
+        </div> 
+        <div id="canvas-container"></div>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
